change resume file name

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             class="btn btn-secondary"
             >Try Prompt Builder</a
           >
-          <a href="/Daneen.pdf" class="btn btn-secondary">View Resume</a>
+          <a href="/Resume.pdf" class="btn btn-secondary">View Resume</a>
         </div>
       </div>
     </section>
@@ -138,6 +138,28 @@
           </article>
 
           <article class="project-card">
+            <div class="project-image">Sora Video Generation</div>
+            <div class="project-content">
+              <h3 class="project-title">AI-Powered Video Content Creation</h3>
+              <div class="project-tags">
+                <span class="project-tag">Sora</span>
+                <span class="project-tag">Video</span>
+                <span class="project-tag">Storytelling</span>
+              </div>
+              <p class="project-subtitle">
+                Walkthrough demonstrating structured prompt creation process for
+                video generation - see prompt engineering methodology in action
+                from concept to final output
+              </p>
+              <a
+                href="/projects/project-03-sora-video-prompting/sora.html"
+                class="project-link"
+                >View Project →</a
+              >
+            </div>
+          </article>
+
+          <article class="project-card">
             <div class="project-image">DALL-E Precision Control</div>
             <div class="project-content">
               <h3 class="project-title">
@@ -156,28 +178,6 @@
               </p>
               <a
                 href="/projects/project-01-dalle-visual-content/dalle.html"
-                class="project-link"
-                >View Project →</a
-              >
-            </div>
-          </article>
-
-          <article class="project-card">
-            <div class="project-image">Sora Video Generation</div>
-            <div class="project-content">
-              <h3 class="project-title">AI-Powered Video Content Creation</h3>
-              <div class="project-tags">
-                <span class="project-tag">Sora</span>
-                <span class="project-tag">Video</span>
-                <span class="project-tag">Storytelling</span>
-              </div>
-              <p class="project-subtitle">
-                Walkthrough demonstrating structured prompt creation process for
-                video generation - see prompt engineering methodology in action
-                from concept to final output
-              </p>
-              <a
-                href="/projects/project-03-sora-video-prompting/sora.html"
                 class="project-link"
                 >View Project →</a
               >
