update css link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daneen Mays - Visual AI Prompt Engineer</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/visual_prompt_builder/style.css" />
   </head>
   <body>
     <!-- Header -->
