--- a/projects/project-03-sora-video-prompting/sora.html
+++ b/projects/project-03-sora-video-prompting/sora.html
@@ -612,7 +612,7 @@
           <!-- Challenge 1: Business/Corporate Realism -->
           <div class="challenge-card">
             <div class="card-header">
-              <span class="challenge-type realistic">Business</span>
+              <span class="challenge-type realistic">Realistic</span>
               <h3 class="card-title">Corporate Presentation Camera Work</h3>
               <p class="card-description">
                 Creating professional camera movement for business presentations
@@ -889,12 +889,12 @@
           <div class="challenge-card">
             <div class="card-header">
               <span class="challenge-type animated">Animated</span>
-              <h3 class="card-title">Fox Character Consistency</h3>
+              <h3 class="card-title">Precise Character Design Specification</h3>
               <p class="card-description">
-                Maintaining consistent animated fox character design across
-                multiple scenes with different expressions and actions. The
-                challenge: preventing character drift while achieving expressive
-                animation in a stylized, family-friendly aesthetic.
+                Creating detailed prompts that generate accurate animated
+                character features and coloring. The challenge: achieving
+                precise anatomical and color specifications that produce the
+                intended character design.
               </p>
             </div>
 
